--- a/Proyecto_1.X/nbproject/Makefile-genesis.properties
+++ b/Proyecto_1.X/nbproject/Makefile-genesis.properties
@@ -1,11 +1,11 @@
 #
-#Fri Mar 12 21:28:05 CST 2021
+#Mon Mar 15 13:56:12 CST 2021
 default.languagetoolchain.version=2.20
 default.Pack.dfplocation=D\:\\packs\\Microchip\\PIC16Fxxx_DFP\\1.2.33
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.20\\pic-as\\bin
-host.id=j22y-1r9x-x
-configurations-xml=21888d3b62d0cc40197ecb8b40778c24
+host.id=1ouj-qoex-2b
+configurations-xml=d5b1007dbf4a078ba8a9e06849f7d928
 default.com-microchip-mplab-nbide-toolchainPICASM-PICASMLanguageToolchain.md5=12dee8777de28f24b1b2ff6904a03143
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
 proj.dir=D\:\\UVG\\Ciclo_1__2021\\Progra_Micros\\Proyecto1_FredyGodoy_19260_PrograMicros\\Proyecto_1.X
